logs/Slang/chapter-5/5.6.4--compiler-directives-pragma.sv.log
name: pragma-directive
description: Try to set a pragma
should_fail: 0
tags: 5.6.4
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.6.4--compiler-directives-pragma.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.6.4--compiler-directives-pragma.sv:9:9: error: expected member
`pragma protect
        ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.6.4--compiler-directives-pragma.sv:11:9: error: expected member
`pragma protect end
        ^~~~~~~
